Deployment/shadow-deployment/shadow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-shadow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest
      track: shadow
  template:
    metadata:
      labels:
        app: aceest
        track: shadow
    spec:
      containers:
        - name: aceest-container
          image: plsphaniteja2024tm93573/aceest-web-app-2024tm93573:dev-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
