Deployment/shadow-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-shadow-service
spec:
  selector:
    app: aceest
    track: shadow
  ports:
    - port: 80
      targetPort: 5000
